# EverybodyCodes

./: .gitignore
rust/: Cargo.toml
rust/2024/day01/: Cargo.toml  part1.txt  part2.txt  part3.txt
rust/2024/day01/src/: main.rs
rust/2024/day02/: Cargo.toml
rust/2024/day02/src/: main.rs
rust/2024/day03/: Cargo.toml
rust/2024/day03/src/: main.rs
rust/2024/day04/: Cargo.toml
rust/2024/day04/src/: main.rs
rust/2024/day05/: Cargo.toml
rust/2024/day05/src/: main.rs
rust/2024/day06/: Cargo.toml
rust/2024/day07/: Cargo.toml
rust/2024/day08/: Cargo.toml
rust/2024/day09/: Cargo.toml
rust/2024/day10/: Cargo.toml
rust/2024/day11/: Cargo.toml
rust/2024/day12/: Cargo.toml
rust/2024/day13/: Cargo.toml
rust/2024/day14/: Cargo.toml
rust/2024/day15/: Cargo.toml
rust/2024/day16/: Cargo.toml
rust/2024/day17/: Cargo.toml
rust/2024/day18/: Cargo.toml
rust/2024/day19/: Cargo.toml
rust/2024/day20/: Cargo.toml
rust/2025/day01/: Cargo.toml
rust/2025/day02/: Cargo.toml
rust/2025/day03/: Cargo.toml
rust/2025/day04/: Cargo.toml
rust/2025/day05/: Cargo.toml
rust/2025/day06/: Cargo.toml
rust/2025/day07/: Cargo.toml
rust/2025/day08/: Cargo.toml
rust/2025/day09/: Cargo.toml
rust/2025/day10/: Cargo.toml
rust/2025/day11/: Cargo.toml
rust/2025/day12/: Cargo.toml
rust/2025/day13/: Cargo.toml
rust/2025/day14/: Cargo.toml
rust/2025/day15/: Cargo.toml
rust/2025/day16/: Cargo.toml
rust/2025/day17/: Cargo.toml
rust/2025/day18/: Cargo.toml
rust/2025/day19/: Cargo.toml
rust/2025/day20/: Cargo.toml
(+53 files in other folders)
