[workspace]
members = [
  "2024/day01",
  "2024/day02",
  "2024/day03",
  "2024/day04",
  "2024/day05",
  "2024/day06",
  "2024/day07",
  "2024/day08",
  "2024/day09",
  "2024/day10",
  "2024/day11",
  "2024/day12",  
  "2024/day13",
  "2024/day14",
  "2024/day15",
  "2024/day16",
  "2024/day17",
  "2024/day18",
  "2024/day19",
  "2024/day20"

    ]
resolver = "2"
