[workspace]
members = [
  "2024/day01",
  "2024/day02",
  "2024/day03",
  "2024/day04",
  "2024/day05",
  "2024/day06",
  "2024/day07",
  "2024/day08",
  "2024/day09",
  "2024/day10",
  "2024/day11",
  "2024/day12",  
  "2024/day13",
  "2024/day14",
  "2024/day15",
  "2024/day16",
  "2024/day17",
  "2024/day18",
  "2024/day19",
  "2024/day20",
  "stories/enigmatus/1",
  "stories/enigmatus/2",
  "stories/enigmatus/3",
  "stories/entertainment/1",
  "stories/entertainment/2", 
  "stories/entertainment/3",
  "2025/day01",
  "2025/day02",
  "2025/day03",
  "2025/day04",
  "2025/day05",
  "2025/day06",
  "2025/day07",
  "2025/day08",
  "2025/day09",
  "2025/day10",
  "2025/day11",
  "2025/day12",
  "2025/day13",
  "2025/day14",
  "2025/day15",
  "2025/day16",
  "2025/day17",

    ]
resolver = "2"
